css/styles.css
body{
    background-color: gray;
    font-family: 'Roboto', sans-serif;
}
/*Post wrapper*/
.post{
    width: min-content;
    margin: 5px;
    display: flexbox;
    position: relative;
    background-color: white;
    
}
/*Post Head*/
.post-head{
    display:flex;
    position: relative;
    width: auto;
}
.html5-icon{
    position: relative;
    padding-inline: 3%;
    display: flexbox;
    padding-top: 5%;
    justify-content: start;
}
.post-title{
    display: flexbox;
    position: relative;
    justify-content: stretch;
    padding-top: 2%;
    text-align: justify;
}
.dotsmenu{
    position: relative;
    justify-content: left;
    display: flexbox;
    padding-top: 5%;
    
}
/*Post Image*/
.post-img{
    height: 50vh;
    width: fit-content;
    display: flex;
    position: relative;
}
/*Post Body*/
.post-body{
    position: relative;
}
.icons{
    padding: 2%;
}
.iconsSpace{
    padding-inline: 0.5%;
}
.bookmark{
    display: inline;
    float: right;
}
.comments{
    padding: 2%;
}

